Fix hero title horizontal alignment

--- a/app/assets/stylesheets/_hero.sass
+++ b/app/assets/stylesheets/_hero.sass
@@ -64,18 +64,12 @@
   #hero-header
     height: rhythm(14)
 
-  .hero-title-group
-    top: rhythm(8)
-
   .hero-title
     +adjust-font-size-to(38px, 2)
     display: inline-block
     padding: 0 rhythm(0.5, 38px)
 
 @media #{$large-up}
-
-  .hero-title-group
-    top: rhythm(8)
 
   .hero-title
     +adjust-font-size-to(44px, 2.5)
